# matrixscroll

./: .gitattributes  .gitignore  .matrixscroll-mission-control-seed  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  SUPPORT.md  glama.json  pyproject.toml  smithery.yaml
.github/: CODEOWNERS  GATE_TEST.md  dependabot.yml  pull_request_template.md  trusted-keys.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: onboarding_smoke.py
.github/workflows/: ci-integration.yml  ci-unit.yml  codecov.yml  formal-verify.yml  onboarding-smoke.yml  provenance-gate.yml  publish.yml  test.yml  verify-manifest.yml
controls/: agentic_ai_controls.json
docs/: ADOPTER_KIT.md  ADOPTION.md  AGENTIC_AI_SECURITY.md  CI_HARD_GATE.md  COMMIT_TIME_VS_ARTIFACT_TIME.md  COMPARISON.md  CRYPTO_BACKEND.md  CRYPTO_ROADMAP.md  DOCTRINE.md  FIVE_MINUTES.md  HERO_DEMO.md  POC2_AUDIT.md  ROADMAP_2026-07.md  SE050_POC_SCOPE.md  SE050_USB_PROTOCOL.md  SECURITY_PROPERTIES.md  SOFTWARE_PRODUCTS.md  WHITEPAPER.md  delegation-attestation-rfc.md  hardware-provider.md  quickstart-agent.md  quickstart-claude-code.md  quickstart-copilot.md  quickstart-cursor.md  quickstart-git.md  quickstart-mcp.md  registries-guide.md  rekor-guac-bridge-design.md  yubikey-bridge.md  yubikey-smoke.md
docs/commercial/: PLATFORM_PIVOT.md  SCROLL_GATE_V2.md  SSX360_SCROLL.md
docs/superpowers/plans/: 2026-06-19-ci-action-plan.md  2026-06-19-sdk-refactor-plan.md
docs/superpowers/specs/: 2026-06-19-matrixscroll-git-design.md
examples/: agentic_ai_evidence_manifest.json  agentic_ai_evidence_manifest.signed.json  commit-envelope.json  commit-envelope.signed.json  release-manifest.json  release-manifest.signed.json  trusted-keys-policy.json
examples/ci/: protected-branch.yml
examples/demo/: agent-commit-demo.sh  generate_signed_examples.py  hero-self-attestation-demo.sh
formal/: PROPERTIES.md  README.md
formal/pluscal/: ScrollGate.tla
formal/tla/: AuthorityFive.cfg  AuthorityFive.tla  CanonicalBytes.cfg  CanonicalBytes.tla  DualSignature.cfg  DualSignature.tla  OrgPlanSync.cfg  OrgPlanSync.tla  ScrollGate.cfg  ScrollGate.tla
matrixscroll/: __init__.py  _claim.py  _core.py  _payment.py  benchmark.py  brainstorm.py  canonical.py  cli.py  constants.py  crypto_backend.py  cursor_artifacts.py  errors.py  formal.py  gate.py  git.py  guac_export.py  immersive_web.py  llm.py  manifest.py  market_radar.py  mcp.py  mcp_core.py  oss_insight.py  policy.py  pqc.py  rekor_publish.py  research_radar.py  scanner.py  search.py  ssx360_cli.py  usecase_synthesizer.py  vault.py  workspace_config.py
matrixscroll/cloud/: __init__.py  client.py
matrixscroll/hooks/: post-commit  pre-push
matrixscroll/provenance/: __init__.py  actions.py
matrixscroll/providers/: __init__.py  base.py  emulated.py  hardware.py  registry.py  se050_transport.py  tpm.py  yubikey.py
matrixscroll/scroll/: README.md  __init__.py
schemas/: action-envelope.v1.json  commit-envelope.v1.1.json  commit-envelope.v1.json  evidence-pack.v1.json  pqc-signature.v1.json  release-manifest.v1.json
scripts/: validate_glama_pypi.py  verify_formal.py
tests/: test_agentic_guidance.py  test_canonical.py  test_canonical_pqc.py  test_cli.py  test_core.py  test_crypto_backend.py  test_formal_specs.py  test_gate.py  test_git_envelope.py  test_guac_rekor.py  test_immersive_web.py  test_mcp_core.py  test_mcp_server.py  test_policy.py  test_pqc.py  test_provenance.py  test_release_metadata.py  test_se050_transport.py  test_security_properties.py  test_ssx360_cli.py  test_tpm_provider.py  test_vectors.py  test_yubikey_provider.py
tests/fixtures/: github-gpgsig-commit.txt
tools/: metrics.py
tools/git/: install.py
tools/git/hooks/: pre-commit  pre-push
vectors/: README.md  _fixture_key.json  _generate.py  tampered_algorithm.json  tampered_device_id.json  tampered_field.json  tampered_nested.json  tampered_public_key.json  tampered_schema.json  tampered_signature.json  unsigned_empty_block.json  unsigned_no_block.json  valid_nested.json  valid_simple.json  valid_unicode.json
