[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "matrixscroll"
version = "0.2.5"
description = "Signed provenance for agent-assisted Git commits with offline verification; emulated Ed25519 ships today and the SE050 hardware path remains in progress."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "SSX360", email = "security@matrixscroll.com" },
]
keywords = [
    "ed25519",
    "signing",
    "provenance",
    "root-of-trust",
    "secure-element",
    "ai",
    "supply-chain",
    "ssx360",
    "matrixscroll",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "build>=1.0",
]
git = []
yubikey = ["python-pkcs11>=0.7"]
tpm = []

[project.scripts]
matrixscroll = "matrixscroll.cli:main"

[project.urls]
Homepage = "https://matrixscroll.com"
Documentation = "https://matrixscroll.com/docs"
Source = "https://github.com/SSX360/matrixscroll"
Issues = "https://github.com/SSX360/matrixscroll/issues"
Specification = "https://github.com/SSX360/matrixscroll/blob/main/SPEC.md"
Whitepaper = "https://github.com/SSX360/matrixscroll/blob/main/docs/WHITEPAPER.md"
Verifier = "https://matrixscroll.com/verify"
Compare = "https://matrixscroll.com/compare"
Security = "https://github.com/SSX360/matrixscroll/blob/main/SECURITY.md"
"GitHub Action" = "https://github.com/SSX360/matrixscroll-verify-action"
"Reference Device" = "https://matrixscroll.com/device"

[tool.hatch.build.targets.wheel]
packages = ["matrixscroll"]

[tool.hatch.build.targets.sdist]
include = [
    "/matrixscroll",
    "/controls",
    "/docs",
    "/schemas",
    "/examples",
    "/tests",
    "/vectors",
    "/README.md",
    "/LICENSE",
    "/SECURITY.md",
    "/SPEC.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
