[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "matrixscroll"
version = "0.4.1"
description = "Signed provenance for agent-assisted Git commits with offline verification; emulated Ed25519 ships today and the SE050 hardware path remains an optional preview."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "SSX360", email = "security@matrixscroll.com" },
]
keywords = [
    "ed25519",
    "signing",
    "provenance",
    "root-of-trust",
    "secure-element",
    "ai",
    "supply-chain",
    "ssx360",
    "matrixscroll",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "build>=1.0",
    "hypothesis>=6.100",
    "pytest-cov>=4.1",
]
git = []
hardware = ["pyserial>=3.5"]
yubikey = ["python-pkcs11>=0.7"]  # experimental preview; mock path in tests
tpm = []  # experimental preview; software-sealed mock when MATRIXSCROLL_MODE=tpm
mcp = [
    "mcp>=1.0.0,<2.0.0",
]

[project.scripts]
matrixscroll = "matrixscroll.cli:main"
matrixscroll-mcp = "matrixscroll.mcp:main"

[project.urls]
Homepage = "https://ssx360.com"
Documentation = "https://ssx360.com/docs"
Repository = "https://github.com/SSX360/matrixscroll"
Source = "https://github.com/SSX360/matrixscroll"
Issues = "https://github.com/SSX360/matrixscroll/issues"
Specification = "https://github.com/SSX360/matrixscroll/blob/main/SPEC.md"
Whitepaper = "https://github.com/SSX360/matrixscroll/blob/main/docs/WHITEPAPER.md"
Verifier = "https://ssx360.com/verify"
Compare = "https://ssx360.com/docs"
Changelog = "https://github.com/SSX360/matrixscroll/blob/main/CHANGELOG.md"
Discussions = "https://github.com/SSX360/matrixscroll/discussions"
Security = "https://github.com/SSX360/matrixscroll/blob/main/SECURITY.md"
"GitHub Action" = "https://github.com/SSX360/matrixscroll-verify-action"
"PyPI Provenance" = "https://pypi.org/project/matrixscroll/"
"Reference Device" = "https://ssx360.com/hardware"
Tests = "https://github.com/SSX360/matrixscroll/tree/main/tests"
"Public Roadmap" = "https://github.com/SSX360/matrixscroll/blob/main/docs/ROADMAP_2026-07.md"

[tool.hatch.build.targets.wheel]
packages = ["matrixscroll"]

[tool.hatch.build.targets.sdist]
include = [
    "/matrixscroll",
    "/controls",
    "/docs",
    "/schemas",
    "/examples",
    "/tests",
    "/vectors",
    "/README.md",
    "/LICENSE",
    "/SECURITY.md",
    "/SPEC.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
